--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,10 @@
         "@symfony/webpack-encore": "^0.27.0",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.7.0",
+        "bootstrap": "^4.3.1",
         "core-js": "^3.0.0",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^7.0.1",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
